# astroport-dca

./: .gitignore
contracts/dca/: Cargo.toml  README.md
contracts/dca/src/: contract.rs  error.rs  fixture.rs  lib.rs  state.rs  utils.rs
contracts/dca/src/handlers/: add_bot_tip.rs  cancel_dca_order.rs  create_dca_order.rs  deposit.rs  mod.rs  modify_dca_order.rs  perform_dca_purchase.rs  update_config.rs  withdraw.rs
contracts/dca/src/queries/: get_config.rs  get_dca_orders.rs  get_sub_msg_data.rs  get_user_dca_orders.rs  mod.rs
contracts/dca/tests/e2e/docker/: terra_local_image.sh
scripts/: .env  README.md  build_app.sh  build_env.sh  build_release.sh  build_schema.sh  create_astro.ts  create_tokens_dev.ts  debug_script.ts  deploy_astro_dca.ts  deploy_core.ts  deploy_pools_dev.ts  deploy_pools_testnet.ts  helpers.ts  script.ts  util.ts
scripts/astroport_artifacts/: astroport_dca_module.wasm  astroport_factory.wasm  astroport_generator.wasm  astroport_pair.wasm  astroport_pair_stable.wasm  astroport_staking.wasm  astroport_xastro_token.wasm  checksums.txt  checksums_intermediate.txt  localterra.json
scripts/tests/: common.ts  main.ts  queries.ts  snippet.ts  test_cancel_dca_order.ts  test_create_order.ts  test_deposit.ts  test_modify_dca_order.ts  test_perform_dca_purchase.ts  test_queries.ts  test_withdraw.ts
scripts/tests/localterra/: local_terra_image.sh  localterra.json
