[package]
name = "astroport-dca-module"
version = "1.0.0"
authors = ["Astroport", "Kaimen Sano"]
edition = "2021"
description = "The Astroport DCA module contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
astroport = { git = "https://github.com/astroport-fi/astroport-core.git", rev = "c216ecd4f350113316be44d06a95569f451ac681" }
astroport-dca = { path = "../../packages/astroport-dca", version = "1.0.0" }
cw2 = { version = "0.13.2" }
cw20 = { version = "0.13.2" }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = {version = "0.13.2"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false, features = ["iterator"] }
cosmwasm-schema = "1.0.0"
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
